--- a/meet-2/tugas/templates/index.html
+++ b/meet-2/tugas/templates/index.html
@@ -4,7 +4,7 @@
 
 {% endblock %} {% block body %}
 <div
-  class="container d-flex justify-content-between align-items-center vh-80 flex-row"
+  id="home" class="container d-flex justify-content-between align-items-center vh-80 flex-row"
 >
   <div class="w-50 d-flex flex-column align-items-end">
     <img
@@ -23,7 +23,7 @@
     </div>
   </div>
 </div>
-<div class="bg-dark text-white p-5">
+<div id="skills" class="bg-dark text-white p-5">
   <h1 class="text-center">Skills</h1>
   <div class="d-flex justify-content-center align-items-center gap-5 mt-4">
     {{ c.Icon('js', size=40, color='#c6c6c6ff') }}
@@ -37,9 +37,9 @@
     {{ c.Icon('nodejs', size=56, color='#c6c6c6ff') }}
   </div>
 </div>
-<div class="p-5">
+<div id="projects" class="p-5">
   <h1 class="text-center">Projects</h1>
-  <div class="d-flex flex-wrap justify-content-center align-items-center gap-4 mt-4">
+  <div class="d-flex flex-wrap justify-content-center align-items-center gap-4 mt-5">
     {{ c.Components(
       name='card', 
       title='Inventory App', 
@@ -75,16 +75,33 @@
   </div>
 </div>
 
-<div class="bg-dark text-white p-5">
+<div id="contact" class="bg-dark text-white p-5">
   <h1 class="text-center">Contact Me</h1>
-  <div class="container">
-    <div class="card" style="width: 18rem;">
-      <img src="{{ url_for('static', filename='images/profile-p.png') }}" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h2 class="card-text text-center" style="font-weight: bold; font-size: 1.5rem;">MUZAAQI</h2>
-        <p class="card-text text-center">5240411230</p>
+  <div class="container mt-5 d-flex gap-5 justify-content-center align-items-center">
+    <div class="mb-3 d-flex justify-content-center px-4">
+      <div class="card" style="width: 18rem;">
+        <img src="{{ url_for('static', filename='images/profile-p.png') }}" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h2 class="card-text text-center" style="font-weight: bold; font-size: 1.5rem;">Muhammad Zaki<br>As Shidiqi</h2>
+          <p class="card-text text-center">5240411230</p>
+        </div>
       </div>
     </div>
+    <form class="mb-3 w-50 p-4 bg-secondary rounded">
+      <div>
+        <label for="exampleFormControlInput1" class="form-label">Name</label>
+        <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Your Name">
+      </div>
+      <div>
+        <label for="exampleFormControlInput1" class="form-label">Email address</label>
+        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+      </div>
+      <div>
+        <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+        <textarea class="form-control" id="exampleFormControlTextarea1" rows="5"></textarea>
+      </div>
+      <button type="submit" class="btn btn-primary mt-3 w-100">Submit</button>
+    </form>
   </div>
 </div>
 {% endblock %}
