--- a/meet-2/tugas/templates/layout.html
+++ b/meet-2/tugas/templates/layout.html
@@ -1,58 +1,53 @@
+{% import 'components.html' as c %}
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg" href="{{ url_for('static', filename='images/favicon.svg') }}" />
     <link
       rel="stylesheet"
       href="{{ url_for('static', filename='css/bootstrap.min.css') }}"
     />
+    <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='css/style.css') }}"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+    <link href="https://fonts.googleapis.com/css2?family=Geist:wght@100..900&display=swap" rel="stylesheet">
     {% block head %} {% endblock %}
   </head>
-  <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
+  <body class="bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg fixed-top px-3 animate__animated animate__fadeInDown">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">MUZONE</a>
+        <a class="navbar-brand" href="#">
+          <img
+            src="{{ url_for('static', filename='images/brand.png') }}"
+            alt="Logo"
+            width="60"
+            class="d-inline-block align-text-top"
+          />
+        </a>
 
-        <div
-          class="collapse navbar-collapse justify-content-center"
-          id="navbarNavAltMarkup"
-        >
-          <div class="navbar-nav">
-            <a class="nav-link" aria-current="page" href="#home">Home</a>
-            <a class="nav-link" href="#skills">Skills</a>
-            <a class="nav-link" href="#projects">Projects</a>
-            <a class="nav-link" href="#contact">Contact</a>
-          </div>
-        </div>
-
+        
         <div class="ms-auto gap-3 d-flex align-items-center">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="20"
-            height="20"
-            fill="currentColor"
-            class="bi bi-github"
-            viewBox="0 0 16 16"
+          <div
+            class="collapse navbar-collapse justify-content-center "
+            id="navbarNavAltMarkup"
           >
-            <path
-              d="M8 0C3.58 0 0 3.58 0 8c0 3.54 
-          2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 
-          0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49
-          -2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15
-          -.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 
-          1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07
-          -1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82
-          -2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 
-          2.2.82.64-.18 1.32-.27 2-.27s1.36.09 
-          2 .27c1.53-1.04 2.2-.82 2.2-.82.44 
-          1.1.16 1.92.08 2.12.51.56.82 1.27.82 
-          2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 
-          1.48 0 1.07-.01 1.93-.01 2.2 
-          0 .21.15.46.55.38A8.01 8.01 0 0 0 
-          16 8c0-4.42-3.58-8-8-8"
-            />
-          </svg>
+            <div class="navbar-nav">
+              <a class="nav-link" aria-current="page" href="#home">Home</a>
+              <a class="nav-link" aria-current="page" href="#about">About</a>
+            </div>
+          </div>
+          <a href="https://github.com/muzaaqi" target="_blank">
+            {{ c.Icon("github", size=24) }}
+          </a>
           <button
             class="navbar-toggler"
             type="button"
@@ -70,5 +65,4 @@
 
     {% block body %} {% endblock %}
     <script src="{{ url_for('static', filename='js/bootstrap.bundle.min.js') }}"></script>
-  </body>
 </html>
